Fix spacing and add TODOs for button functionality.

--- a/src/components/events/events-view/event-block/eventBlock.css
+++ b/src/components/events/events-view/event-block/eventBlock.css
@@ -93,6 +93,4 @@
 
 #week-edit-event-title, #week-event-title {
     margin: 0;
-    padding-left: 3%;
-    padding-top: 3%;
 }
